images and basic css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(http://78.media.tumblr.com/d1529ac33117c9e2f73261696c95f7da/tumblr_ny31kik4Vy1qj0r8qo2_400.png) repeat fixed;
+    background: url(../images/pastel2.png) repeat fixed;
     font-family: 'Montserrat', sans-serif;
 }
 
