--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h1 {
     font-size: 9em;
     text-align: center;
     color: #fff;
-    background: #f3c6ff;
+    background: #eebcfb;
     padding-bottom: 18px;
     margin: 100px 12% 0;
     text-transform: lowercase;
@@ -103,7 +103,7 @@ h1::before {
     float: left;
     width: 33%;
     margin-left: 2%;
-    height: 250px;
+    min-height: 250px;
     background: #f1abc5;
     padding: 25px;
     box-shadow: 0 3px 3px #00000014;
@@ -120,6 +120,7 @@ h1::before {
     color: #fff;
     font-family: 'Londrina Outline', sans-serif;
     font-size: 3.5em;
+    text-transform: uppercase;
 }
 
 #display-main::before, #letter-bank::before {
@@ -163,11 +164,11 @@ footer span {
 
 /* animation lol */
 
-/*@keyframes animatedBackground {
+@keyframes animatedBackground {
 	from { background-position: 0 0; }
 	to { background-position: 100% 100%; }
 }
 
 body {
     animation: animatedBackground 60s linear infinite;
-}*/
+}
