--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,11 @@ body {
     color: #7b7b7b;
 }
 
+.smooth {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 h1 {
     display: block;
     position: relative;
@@ -23,9 +28,9 @@ h1 {
     font-size: 9em;
     text-align: center;
     color: #fff;
-    background: #eebcfb;
+    background: #eca5ff;
     padding-bottom: 18px;
-    margin: 100px 12% 0;
+    margin: 70px 12% 0;
     text-transform: lowercase;
     box-shadow: 0 0 3px #00000014;
 
@@ -68,12 +73,13 @@ h1::before {
 
 .main {
     width: 65%;
-    margin: 50px auto;
+    margin: 40px auto;
+    text-align: center;
 }
 
 .main #display-main {
     position: relative;
-    background: #ade8d1;
+    background: #97f1ce;
     color: #fff;
     height: 250px;
     float: left;
@@ -104,7 +110,7 @@ h1::before {
     width: 33%;
     margin-left: 2%;
     min-height: 250px;
-    background: #f1abc5;
+    background: #f5a0c0;
     padding: 25px;
     box-shadow: 0 3px 3px #00000014;
 }
@@ -136,6 +142,22 @@ h1::before {
     border: 1px solid #fff;
 }
 
+/* reset */
+
+.button {
+    display: inline-block;
+    margin-top: 70px;
+    font-family: 'Londrina Outline', sans-serif;
+    background: #b2b8f7;
+    color: #fff;
+    text-decoration: none;
+    padding: 18px 45px;
+    text-transform: lowercase;
+    font-size: 3em;
+    border-radius: 4px;
+    box-shadow: 0 0 3px #00000014;
+}
+
 /* sticky footer */
 
 html {
@@ -164,11 +186,11 @@ footer span {
 
 /* animation lol */
 
-@keyframes animatedBackground {
+/* @keyframes animatedBackground {
 	from { background-position: 0 0; }
 	to { background-position: 100% 100%; }
 }
 
 body {
     animation: animatedBackground 60s linear infinite;
-}
+} */
