--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body {
     color: #7b7b7b;
 }
 
+em {
+    font-style: italic;
+}
+
 .smooth {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -122,6 +126,10 @@ h1::before {
     margin: -25px -25px 25px -25px;
 }
 
+#letter-bank #strikes {
+    font-weight: bold;
+}
+
 #letter-bank #used-letter {
     color: #fff;
     font-family: 'Londrina Outline', sans-serif;
@@ -156,6 +164,12 @@ h1::before {
     font-size: 3em;
     border-radius: 4px;
     box-shadow: 0 0 3px #00000014;
+    cursor: pointer;
+}
+
+#mute {
+    background: #eca5ff;
+    margin-left: 1.5%;
 }
 
 /* sticky footer */
@@ -174,7 +188,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 80px;
-    padding-top: 25px;
+    line-height: 80px;
     background-color: #fdfdfd;
     text-align: center;
     box-shadow: inset 0 3px 3px #00000014;
@@ -186,11 +200,11 @@ footer span {
 
 /* animation lol */
 
-/* @keyframes animatedBackground {
+@keyframes animatedBackground {
 	from { background-position: 0 0; }
 	to { background-position: 100% 100%; }
 }
 
 body {
     animation: animatedBackground 60s linear infinite;
-} */
+}
