adjusted wrapper and css animations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ em {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.wrapper {
+    overflow-X: hidden;
+}
+
 h1 {
     display: block;
     position: relative;
@@ -33,8 +37,8 @@ h1 {
     text-align: center;
     color: #fff;
     background: #eca5ff;
+    margin: 70px -8% 50px;
     padding-bottom: 18px;
-    margin: 70px 12% 0;
     text-transform: lowercase;
     box-shadow: 0 0 3px #00000014;
 
@@ -79,6 +83,8 @@ h1::before {
     width: 65%;
     margin: 40px auto;
     text-align: center;
+    min-width: 850px;
+    max-width: 1000px;
 }
 
 .main #display-main {
@@ -198,6 +204,13 @@ footer span {
     font-size: 80%;
 }
 
+footer a {
+    text-decoration: none;
+    color: #eb9bff;
+    font-weight: bold;
+    margin-right: 7px;
+}
+
 /* animation lol */
 
 @keyframes animatedBackground {
@@ -207,4 +220,15 @@ footer span {
 
 body {
     animation: animatedBackground 60s linear infinite;
+}
+
+.button:hover, .button:active, .button:focus {
+    background-color: #949be4;
+
+    /* prefixes */
+    transform: translateY(-3px);
+}
+
+#mute:hover, #mute:active {
+    background-color: #df8ef3;
 }
