--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,8 @@ h1 {
     box-shadow: 0 0 3px #00000014;
 
     /* add prefix */
+    -webkit-transform: rotate(2deg);
+    -ms-transform: rotate(2deg);
     transform: rotate(2deg);
 }
 
@@ -59,6 +61,8 @@ h1::after {
     border: 1px solid #fff;
 
     /* add prefix */
+    -webkit-transform: rotate(-25deg);
+    -ms-transform: rotate(-25deg);
     transform: rotate(-25deg);
 }
 
@@ -219,6 +223,8 @@ footer a {
 }
 
 body {
+    /* prefix */
+    -webkit-animation: animatedBackground 60s linear infinite;
     animation: animatedBackground 60s linear infinite;
 }
 
@@ -226,6 +232,8 @@ body {
     background-color: #949be4;
 
     /* prefixes */
+    -webkit-transform: translateY(-3px);
+    -ms-transform: translateY(-3px);
     transform: translateY(-3px);
 }
 
