--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,7 +219,7 @@ footer a {
 
 @keyframes animatedBackground {
 	from { background-position: 0 0; }
-	to { background-position: 100% 100%; }
+	to { background-position: 100% 0; }
 }
 
 body {
